[514051] fixed connection routing and adjusting when zoomed
with this fix now the connection adjustment handles are correctly sized
when zoomed. Furthermore connection adjustment itself and routing when
zoomed has been fixed.

Bug: https://bugs.eclipse.org/bugs/show_bug.cgi?id=514051
Change-Id: I06664688e2458257d3542395eece7ad4af499cb0
Signed-off-by: Alois Zoitl <alois.zoitl@gmx.at>